ci: add debug env variable

--- a/.github/workflows/terraform-cd.yml
+++ b/.github/workflows/terraform-cd.yml
@@ -1,5 +1,8 @@
 name: Terraform Deploy
 
+env:
+  ACTIONS_STEP_DEBUG: true
+
 on:
   workflow_dispatch:
   push:
@@ -12,7 +15,6 @@ permissions:
 jobs:
   terraform:
     runs-on: ubuntu-latest
-    environment: organizations
 
     steps:
       - name: Checkout Repository
