--- a/.github/workflows/terraform-cd.yml
+++ b/.github/workflows/terraform-cd.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           cat <<EOF > terraform.tfvars
           development_email = "${{ secrets.DEVELOPMENT_EMAIL }}"
-          uat_email = "${{ secrets.UAT_EMAIL}}
+          uat_email = "${{ secrets.UAT_EMAIL }}"
           production_email = "${{ secrets.PRODUCTION_EMAIL }}"
           EOF
 
