ci: disable workflow

--- a/.github/workflows/terraform-cd.yml
+++ b/.github/workflows/terraform-cd.yml
@@ -3,7 +3,7 @@ name: Terraform Deploy
 on:
   workflow_dispatch:
   push:
-    branches: [main]
+    branches: [never]
 
 permissions:
   id-token: write
